--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,43 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  min-height: 100vh;
+  max-height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+label {
+  display: flex;
+  align-items: center;
+  display: inline-block;
+  width: 46%;
+}
+
+.el {
+  margin-right: 10px;
+}
+
+.inputs {
+  width: 100%;
+  padding: 20px;
+}
+
+label:nth-last-child(3) {
+  margin-right: 20px;
+}
+
+input[type="Number"] {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+}
+
+button[type="submit"] {
+  display: block;
+  margin: 20px 50% 0 calc(50% - 15px);
+  padding: 10px;
 }
